--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,14 @@
 
 		<resources>
 			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.properties</include>
+				</includes>
+				<filtering>false</filtering>
+			</resource>
+
+			<resource>
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.properties</include>
@@ -190,7 +198,7 @@
 				</includes>
 				<filtering>true</filtering>
 			</resource>
-			
+
 		</resources>
 	</build>
 </project>
