--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
-			<version>1.4.4</version>
+			<version>1.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.belerweb</groupId>
@@ -118,6 +118,23 @@
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.12</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.41</version>
+		</dependency>
 		<!--slf4j -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -185,6 +202,7 @@
 					<exclude>connection.xml</exclude>
 					<exclude>log4j.xml</exclude>
 					<exclude>mongo-log.xml</exclude>
+					<exclude>rediscon.xml</exclude>
 				</excludes>
 				<filtering>false</filtering>
 			</resource>
@@ -195,6 +213,7 @@
 					<include>connection.xml</include>
 					<include>log4j.xml</include>
 					<include>mongo-log.xml</include>
+					<include>rediscon.xml</include>
 				</includes>
 				<filtering>true</filtering>
 			</resource>
